...
        textView.backgroundColor = .clear
        textView.tintColor = UIColor(designSystemColor: .accentPrimary)
        textView.textColor = UIColor(designSystemColor: .textPrimary)
        textView.textContainerInset = Constants.textContainerInset
        textView.isScrollEnabled = false
        textView.delegate = self
        textView.accessibilityIdentifier = "AIChatNativeInputView.textView"
        textView.translatesAutoresizingMaskIntoConstraints = false
        return textView
    }()

    private lazy var placeholderLabel: UILabel = {
        let label = UILabel()
...
    }()

    private lazy var submitButton: UIButton = {
        let button = UIButton(type: .system)
        button.setImage(DesignSystemImages.Glyphs.Size24.arrowUp, for: .normal)
        button.tintColor = UIColor(designSystemColor: .accentPrimary)
        button.accessibilityIdentifier = "AIChatNativeInputView.submitButton"
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(submitButtonTapped), for: .touchUpInside)
        button.isEnabled = false
        return button
    }()

...
