...
      "comment" : "Title for the attach placeholder chip in Duck.ai contextual sheet",
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "bg" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Attach Page Content"
          }
        },
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Attach Page Content"
...
